--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Medicina General | Hospitales regionales El Salvador</title>
+        <title>Información general</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,8 +15,9 @@
         <header>
             <nav>
                 <div>
-                    <h1><a href="index.html"><span class="material-symbols-outlined">local_hospital</span>Hospitales regionales El Salvador </a></h1>
+                    <h1><a href="index.html"><span class="material-symbols-outemoji">emoji_nature</span>Jardín de flores</a></h1>
                 </div>
+                
             
                 <ul>
                     <li>
