--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
                         <a href="#">Home</a>
                     </li>
                     <li>
-                        <a href="servicios.html">Servicios</a>
+                        <a href="servicios.html">Contactanos</a>
                     </li>
                     <li>
-                        <a href="aboutus.html">Sobre Nosotros</a>
+                        <a href="aboutus.html">Nuestra galería</a>
                     </li>
                     <li>
-                        <a href="contactus.html">Contactanos</a>
+                        <a href="contactus.html">About Us</a>
                     </li>
                 </ul>
             </nav>
         </header>
         <div class="contenedor">
             <div class="present">
-                <h1>¡Todos unidos por el país!</h1>
-                <p>Deseamos que todos los salvadoreños cuenten con salud gratuita y disponible para la población más vulnerable</p>
-                <button class="btnpresent"> <i class="material-symbols-outlined">map</i>Ubicaciones </button>
+                <h1>El Jardín de las flores</h1>
+                <p>Conoce nuestra colección de flores en nuestra glaeria</p>
+                <button class="btnpresent"><i class="material-symbols-outlined">image</i>Contactanos </button>
             </div>                
         </div>
         <div class="container swiper">
@@ -100,52 +100,7 @@
               <div class="swiper-slide-button swiper-button-next"></div>
             </div>
         </div>
-        <div class="SolitInfo"> 
-          <div class="info-content">
-            <div class="form-section">
-              <h2 class="text">Formulario de Contacto</h2>
-              <form action="#">
-                <div class="form-row">
-                  <div class="input-data">
-                    <input type="text" required>
-                    <div class="underline"></div>
-                    <label for="">Primer Nombre</label>
-                  </div>
-                  <div class="input-data">
-                    <input type="text" required>
-                    <div class="underline"></div>
-                    <label for="">Apellido</label>
-                  </div>
-                </div>
-                <div class="form-row">
-                  <div class="input-data">
-                    <input type="email" required>
-                    <div class="underline"></div>
-                    <label for="">Correo electrónico</label>
-                  </div>
-                </div>
-                <div class="form-row">
-                  <div class="input-data textarea">
-                    <textarea rows="8" cols="80" required></textarea>
-                    <br />
-                    <div class="underline"></div>
-                    <label for="">Escribe tu mensaje</label>
-                    <br />
-                    <div class="form-row submit-btn">
-                      <div class="input-data">
-                        <div class="inner"></div>
-                        <input type="submit" value="Enviar">
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </form>
-            </div>
-            <div class="image-section">
-              <img src="imagen/imgq.jpg" alt="Doctor Image" class="doctor-image">
-            </div>
-          </div>
-        </div>
+        
         <footer>
           <div class="footer-container">
               <div class="footer-content">
