--- a/contactus.html
+++ b/contactus.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Medicina General | Hospitales regionales El Salvador</title>
+        <title>Información general</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,7 @@
         <header>
             <nav>
                 <div>
-                    <h1><a href="index.html"><span class="material-symbols-outlined">local_hospital</span>Hospitales regionales El Salvador </a></h1>
+                    <h1><a href="index.html"><span class="material-symbols-outlined">emoji_nature</span>Jardín de flores</a></h1>
                 </div>
             
                 <ul>
@@ -34,11 +34,56 @@
                 </ul>
             </nav>
         </header>
-        
+        <div class="SolitInfo"> 
+            <div class="info-content">
+              <div class="form-section">
+                <h2 class="text">Formulario de Contacto</h2>
+                <form action="#">
+                  <div class="form-row">
+                    <div class="input-data">
+                      <input type="text" required>
+                      <div class="underline"></div>
+                      <label for="">Primer Nombre</label>
+                    </div>
+                    <div class="input-data">
+                      <input type="text" required>
+                      <div class="underline"></div>
+                      <label for="">Apellido</label>
+                    </div>
+                  </div>
+                  <div class="form-row">
+                    <div class="input-data">
+                      <input type="email" required>
+                      <div class="underline"></div>
+                      <label for="">Correo electrónico</label>
+                    </div>
+                  </div>
+                  <div class="form-row">
+                    <div class="input-data textarea">
+                      <textarea rows="8" cols="80" required></textarea>
+                      <br />
+                      <div class="underline"></div>
+                      <label for="">Escribe tu mensaje</label>
+                      <br />
+                      <div class="form-row submit-btn">
+                        <div class="input-data">
+                          <div class="inner"></div>
+                          <input type="submit" value="Enviar">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </form>
+              </div>
+              <div class="image-section">
+                <img src="imagen/imgq.jpg" alt="Doctor Image" class="doctor-image">
+              </div>
+            </div>
+          </div>
         <footer>
           <div class="footer-container">
               <div class="footer-content">
-                  <h3>Hospitales Regionales El Salvador</h3>
+                  <h3>Jardín de flores</h3>
                   <p>Somos un hospital con más de 27 años de experiencia, prestando servicios hospitalarios con calidad técnica y humana al gremio médico y a la población en general.</p>
               </div>
               <div class="footer-contact">
