--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                         <a href="#">Home</a>
                     </li>
                     <li>
-                        <a href="servicios.html">Contactanos</a>
+                        <a href="contactus.html">Contactanos</a>
                     </li>
                     <li>
-                        <a href="aboutus.html">Nuestra galería</a>
+                        <a href="servicios.html">Nuestra galería</a>
                     </li>
                     <li>
-                        <a href="contactus.html">About Us</a>
+                        <a href="aboutus.html">About Us</a>
                     </li>
                 </ul>
             </nav>
@@ -43,53 +43,37 @@
             </div>                
         </div>
         <div class="container swiper">
-            <h2 class="section-title">Servicios Hospitalarios</h2>
+            <h2 class="section-title">Nuestra colección </h2>
             <div class="card-wrapper">
               <ul class="card-list swiper-wrapper">
                 <li class="card-item swiper-slide">
-                  <a href="#" class="card-link">
-                    <img src="imagen/cirujia.jpg" alt="Card Image" class="card-image">
-                    <p class="badge badge-designer">Cirugia</p>
+                  <a href="servicios.html" class="card-link">
+                    <img src="imagen/anemone-2396299_1920.jpg" alt="Card Image" class="card-image">
+                    <p class="badge badge-designer">Anemona Azul</p>
                     <h2 class="card-title">Lorem ipsum dolor sit explicabo adipisicing elit</h2>
                     <button class="card-button material-symbols-outlined">arrow_forward</button>
                   </a>
                 </li>
                 <li class="card-item swiper-slide">
-                    <a href="#" class="card-link">
-                      <img src="imagen/cirujia.jpg" alt="Card Image" class="card-image">
-                      <p class="badge badge-designer">Cirugia</p>
+                    <a href="servicios.html" class="card-link">
+                      <img src="imagen/cherry-blossom-tree-1225186_1920.jpg" alt="Card Image" class="card-image">
+                      <p class="badge badge-designer">flores de Cerezo</p>
                       <h2 class="card-title">Lorem ipsum dolor sit explicabo adipisicing elit</h2>
                       <button class="card-button material-symbols-outlined">arrow_forward</button>
                     </a>
                 </li>
                 <li class="card-item swiper-slide">
-                    <a href="#" class="card-link">
-                      <img src="imagen/cirujia.jpg" alt="Card Image" class="card-image">
-                      <p class="badge badge-designer">Cirugia</p>
+                    <a href="servicios.html" class="card-link">
+                      <img src="imagen/bird-7403593_1280.jpg" alt="Card Image" class="card-image">
+                      <p class="badge badge-designer">Amapolas</p>
                       <h2 class="card-title">Lorem ipsum dolor sit explicabo adipisicing elit</h2>
                       <button class="card-button material-symbols-outlined">arrow_forward</button>
                     </a>
                 </li>
                 <li class="card-item swiper-slide">
-                    <a href="#" class="card-link">
-                      <img src="imagen/cirujia.jpg" alt="Card Image" class="card-image">
-                      <p class="badge badge-designer">Cirugia</p>
-                      <h2 class="card-title">Lorem ipsum dolor sit explicabo adipisicing elit</h2>
-                      <button class="card-button material-symbols-outlined">arrow_forward</button>
-                    </a>
-                </li>
-                <li class="card-item swiper-slide">
-                    <a href="#" class="card-link">
-                      <img src="imagen/cirujia.jpg" alt="Card Image" class="card-image">
-                      <p class="badge badge-designer">Cirugia</p>
-                      <h2 class="card-title">Lorem ipsum dolor sit explicabo adipisicing elit</h2>
-                      <button class="card-button material-symbols-outlined">arrow_forward</button>
-                    </a>
-                </li>
-                <li class="card-item swiper-slide">
-                    <a href="#" class="card-link">
-                      <img src="imagen/cirujia.jpg" alt="Card Image" class="card-image">
-                      <p class="badge badge-designer">Cirugia</p>
+                    <a href="servicios.html" class="card-link">
+                      <img src="imagen/silver-wattle-7442792_1280.jpg" alt="Card Image" class="card-image">
+                      <p class="badge badge-designer">Acacia de Plata</p>
                       <h2 class="card-title">Lorem ipsum dolor sit explicabo adipisicing elit</h2>
                       <button class="card-button material-symbols-outlined">arrow_forward</button>
                     </a>
