--- a/galeria.html
+++ b/galeria.html
@@ -70,6 +70,7 @@
         </div>
 
         <!-- Nueva sección de videos -->
+         <section class="videocontent">
         <div class="container video-gallery">
             <h2 class="section-title">Nuestra colección de videos</h2>
             <div class="video-wrapper">
@@ -80,10 +81,6 @@
                                 <source src="videos/16453-272487468_small.mp4" type="video/mp4">
                                 Tu navegador no soporta la etiqueta de video.
                             </video>
-                            <div class="video-text">
-                                <h2 class="video-title">Video de flores 1</h2>
-                                <p>Este video muestra una hermosa colección de flores en plena floración durante la primavera.</p>
-                            </div>
                         </div>
                     </li>
                     <li class="video-item">
@@ -92,10 +89,6 @@
                                 <source src="videos/205397-926957391_small.mp4" type="video/mp4">
                                 Tu navegador no soporta la etiqueta de video.
                             </video>
-                            <div class="video-text">
-                                <h2 class="video-title">Video de flores 2</h2>
-                                <p>Disfruta de las magníficas flores de colores vibrantes capturadas en este video.</p>
-                            </div>
                         </div>
                     </li>
                     <li class="video-item">
@@ -104,15 +97,12 @@
                                 <source src="videos/213874_tiny.mp4" type="video/mp4">
                                 Tu navegador no soporta la etiqueta de video.
                             </video>
-                            <div class="video-text">
-                                <h2 class="video-title">Video de flores 3</h2>
-                                <p>Este video destaca la elegancia y diversidad de las flores en su entorno natural.</p>
-                            </div>
                         </div>
                     </li>
                 </ul>
             </div>
         </div>
+    </section>
 
         <footer>
             <div class="footer-container">
