--- a/galeria.html
+++ b/galeria.html
@@ -107,18 +107,18 @@
         <footer>
             <div class="footer-container">
                 <div class="footer-content">
-                    <h3>Hospitales Regionales El Salvador</h3>
-                    <p>Somos un hospital con más de 27 años de experiencia...</p>
+                    <h3>Jardín de flores El Salvador</h3>
+                    <p>Explorando la belleza de las flores</p>
                 </div>
                 <div class="footer-contact">
                     <h4>Contáctanos</h4>
-                    <p>Email: <a href="mailto:info@hospitalregional.com.sv">info@hospitalregional.com.sv</a></p>
+                    <p>Email: <a href="mailto:info@jardinflores.com.sv">info@hospitalregional.com.sv</a></p>
                     <p>Dirección: 27 Av. Nte #1317 San Salvador, El Salvador</p>
                     <p>PBX: 2440-3344 / 2623-5555</p>
                 </div>
             </div>
             <div class="footer-copyright">
-                <p>&copy; 2024 Hospitales Regionales El Salvador. Todos los derechos reservados.</p>
+                <p>&copy; 2024 Jardín de Flores El Salvador. Todos los derechos reservados.</p>
             </div>
         </footer>
 
