--- a/404.html
+++ b/404.html
@@ -26,18 +26,19 @@
     <footer>
         <div class="footer-container">
             <div class="footer-content">
-                <h3>Jardín de flores El Salvador</h3>
-                <p>Explorando la belleza de las flores</p>
+                <h3>Galería de Las Flores.</h3>
+                <p>Nosotros creemos en el poder de las flores dando felicidad y alegría. 
+                  Traemos a ustedes hermosas flores y transmitirlas a tráves de esta galería trabajada con amor y cariño</p>
             </div>
             <div class="footer-contact">
                 <h4>Contáctanos</h4>
-                <p>Email: <a href="mailto:info@jardinflores.com.sv">info@hospitalregional.com.sv</a></p>
+                <p>Email: <a href="mailto:info@floresgaleria.com.sv">info@floresgaleria.com.sv</a></p>
                 <p>Dirección: 27 Av. Nte #1317 San Salvador, El Salvador</p>
                 <p>PBX: 2440-3344 / 2623-5555</p>
             </div>
         </div>
         <div class="footer-copyright">
-            <p>&copy; 2024 Jardín de Flores El Salvador. Todos los derechos reservados.</p>
+            <p>&copy; 2024 Galería de Las Flores. Todos los derechos reservados.</p>
         </div>
     </footer>
 </body>
