--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Información general</title>
+  <title>Galería de Las Flores</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +20,7 @@
   <header>
     <nav>
       <div>
-        <h1><a href="index.html"><span class="material-symbols-outlined">emoji_nature</span>Jardín de flores</a></h1>
+        <h1><a href="index.html"><span class="material-symbols-outlined">emoji_nature</span>Galería de Las Flores</a></h1>
       </div>
 
 
@@ -52,34 +52,34 @@
     <div class="card-wrapper">
       <ul class="card-list swiper-wrapper">
         <li class="card-item swiper-slide">
-          <a href="servicios.html" class="card-link">
+          <a href="galeria.html" class="card-link">
             <img src="imagen/anemone-2396299_1920.jpg" alt="Card Image" class="card-image">
             <p class="badge badge-designer">Anemona Azul</p>
-            <h2 class="card-title">Lorem ipsum dolor sit explicabo adipisicing elit</h2>
+            <h2 class="card-title">La Anémona Azul, símbolo de anticipación y amor no correspondido</h2>
             <button class="card-button material-symbols-outlined">arrow_forward</button>
           </a>
         </li>
         <li class="card-item swiper-slide">
-          <a href="servicios.html" class="card-link">
+          <a href="galeria.html" class="card-link">
             <img src="imagen/cherry-blossom-tree-1225186_1920.jpg" alt="Card Image" class="card-image">
             <p class="badge badge-designer">flores de Cerezo</p>
-            <h2 class="card-title">Lorem ipsum dolor sit explicabo adipisicing elit</h2>
+            <h2 class="card-title">La Sakura, un símbolo de la fragilidad y la belleza de la vida</h2>
             <button class="card-button material-symbols-outlined">arrow_forward</button>
           </a>
         </li>
         <li class="card-item swiper-slide">
-          <a href="servicios.html" class="card-link">
+          <a href="galeria.html" class="card-link">
             <img src="imagen/bird-7403593_1280.jpg" alt="Card Image" class="card-image">
             <p class="badge badge-designer">Amapolas</p>
-            <h2 class="card-title">Lorem ipsum dolor sit explicabo adipisicing elit</h2>
+            <h2 class="card-title">Las Amapolas, un emblema de recuerdo, esperanza y renovación</h2>
             <button class="card-button material-symbols-outlined">arrow_forward</button>
           </a>
         </li>
         <li class="card-item swiper-slide">
-          <a href="servicios.html" class="card-link">
+          <a href="galeria.html" class="card-link">
             <img src="imagen/silver-wattle-7442792_1280.jpg" alt="Card Image" class="card-image">
             <p class="badge badge-designer">Acacia de Plata</p>
-            <h2 class="card-title">Lorem ipsum dolor sit explicabo adipisicing elit</h2>
+            <h2 class="card-title">La Acacia de Plata, símbolo de amistad y fortaleza femenina</h2>
             <button class="card-button material-symbols-outlined">arrow_forward</button>
           </a>
         </li>
@@ -92,22 +92,22 @@
 
   <footer>
     <div class="footer-container">
-      <div class="footer-content">
-        <h3>Hospitales Regionales El Salvador</h3>
-        <p>Somos un hospital con más de 27 años de experiencia, prestando servicios hospitalarios con calidad técnica y
-          humana al gremio médico y a la población en general.</p>
-      </div>
-      <div class="footer-contact">
-        <h4>Contáctanos</h4>
-        <p>Email: <a href="mailto:info@hospitalregional.com.sv">info@hospitalregional.com.sv</a></p>
-        <p>Dirección: 27 Av. Nte #1317 San Salvador, El Salvador</p>
-        <p>PBX: 2440-3344 / 2623-5555</p>
-      </div>
+        <div class="footer-content">
+            <h3>Galería de Las Flores.</h3>
+            <p>Nosotros creemos en el poder de las flores dando felicidad y alegría. 
+              Traemos a ustedes hermosas flores y transmitirlas a tráves de esta galería trabajada con amor y cariño</p>
+        </div>
+        <div class="footer-contact">
+            <h4>Contáctanos</h4>
+            <p>Email: <a href="mailto:info@floresgaleria.com.sv">info@floresgaleria.com.sv</a></p>
+            <p>Dirección: 27 Av. Nte #1317 San Salvador, El Salvador</p>
+            <p>PBX: 2440-3344 / 2623-5555</p>
+        </div>
     </div>
     <div class="footer-copyright">
-      <p>&copy; 2024 Hospitales Regionales El Salvador. Todos los derechos reservados.</p>
+        <p>&copy; 2024 Galería de Las Flores. Todos los derechos reservados.</p>
     </div>
-  </footer>
+</footer>
 
 
 
