--- a/galeria.html
+++ b/galeria.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Jardín de Flores</title>
+        <title>Galería de Las Flores</title>
         <link rel="stylesheet" href="css/galeria.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,51 +14,61 @@
     <body>
         <header>
             <nav>
-                <div>
-                    <h1><a href="index.html"><span class="material-symbols-outlined">emoji_nature</span> Jardín de flores</a></h1>
-                </div>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="contactus.html">Contáctanos</a></li>
-                    <li><a href="servicios.html">Nuestra galería</a></li>
-                    <li><a href="aboutus.html">About Us</a></li>
-                </ul>
+              <div>
+                <h1><a href="index.html"><span class="material-symbols-outlined">emoji_nature</span>Galería de Las Flores</a></h1>
+              </div>
+        
+        
+              <ul>
+                <li>
+                  <a href="index.html">Home</a>
+                </li>
+                <li>
+                  <a href="contactus.html">Contactanos</a>
+                </li>
+                <li>
+                  <a href="galeria.html">Nuestra galería</a>
+                </li>
+                <li>
+                  <a href="aboutus.html">About Us</a>
+                </li>
+              </ul>
             </nav>
-        </header>
+          </header>
 
         <div class="container swiper">
             <h2 class="section-title">Nuestra colección</h2>
             <div class="card-wrapper">
                 <ul class="card-list swiper-wrapper">
                     <li class="card-item swiper-slide">
-                      <a href="servicios.html" class="card-link">
+                      <a href="galeria.html" class="card-link">
                         <img src="imagen/anemone-2396299_1920.jpg" alt="Card Image" class="card-image">
                         <p class="badge badge-designer">Anemona Azul</p>
-                        <h2 class="card-title">Lorem ipsum dolor sit explicabo adipisicing elit</h2>
+                        <h2 class="card-title">Las anémonas azules son flores elegantes y vibrantes, conocidas por sus pétalos sedosos de un color azul intenso. Simbolizan la anticipación y el amor no correspondido, y florecen principalmente en primavera.</h2>
                         <button class="card-button material-symbols-outlined">arrow_forward</button>
                       </a>
                     </li>
                     <li class="card-item swiper-slide">
-                      <a href="servicios.html" class="card-link">
+                      <a href="galeria.html" class="card-link">
                         <img src="imagen/cherry-blossom-tree-1225186_1920.jpg" alt="Card Image" class="card-image">
                         <p class="badge badge-designer">flores de Cerezo</p>
-                        <h2 class="card-title">Lorem ipsum dolor sit explicabo adipisicing elit</h2>
+                        <h2 class="card-title">Las flores de cerezo, o sakura, son famosas por su belleza efímera. Cada primavera, estos árboles adornan parques y jardines con sus delicadas flores rosadas, simbolizando la fragilidad y la belleza de la vida.</h2>
                         <button class="card-button material-symbols-outlined">arrow_forward</button>
                       </a>
                     </li>
                     <li class="card-item swiper-slide">
-                      <a href="servicios.html" class="card-link">
+                      <a href="galeria.html" class="card-link">
                         <img src="imagen/bird-7403593_1280.jpg" alt="Card Image" class="card-image">
                         <p class="badge badge-designer">Amapolas</p>
-                        <h2 class="card-title">Lorem ipsum dolor sit explicabo adipisicing elit</h2>
+                        <h2 class="card-title">Las amapolas son conocidas por sus vibrantes pétalos rojos y su asociación con el recuerdo y la paz. En algunas culturas, también representan la esperanza y la renovación tras la adversidad.</h2>
                         <button class="card-button material-symbols-outlined">arrow_forward</button>
                       </a>
                     </li>
                     <li class="card-item swiper-slide">
-                      <a href="servicios.html" class="card-link">
+                      <a href="galeria.html" class="card-link">
                         <img src="imagen/silver-wattle-7442792_1280.jpg" alt="Card Image" class="card-image">
                         <p class="badge badge-designer">Acacia de Plata</p>
-                        <h2 class="card-title">Lorem ipsum dolor sit explicabo adipisicing elit</h2>
+                        <h2 class="card-title">La Acacia de Plata es famosa por sus pequeñas flores amarillas en forma de esferas. Estas flores se asocian con la amistad y la ternura, y son un símbolo de fortaleza femenina. Bellezas coloridas y hermosas.</h2>
                         <button class="card-button material-symbols-outlined">arrow_forward</button>
                       </a>
                     </li>
@@ -104,23 +114,24 @@
         </div>
     </section>
 
-        <footer>
-            <div class="footer-container">
-                <div class="footer-content">
-                    <h3>Jardín de flores El Salvador</h3>
-                    <p>Explorando la belleza de las flores</p>
-                </div>
-                <div class="footer-contact">
-                    <h4>Contáctanos</h4>
-                    <p>Email: <a href="mailto:info@jardinflores.com.sv">info@hospitalregional.com.sv</a></p>
-                    <p>Dirección: 27 Av. Nte #1317 San Salvador, El Salvador</p>
-                    <p>PBX: 2440-3344 / 2623-5555</p>
-                </div>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-content">
+                <h3>Galería de Las Flores.</h3>
+                <p>Nosotros creemos en el poder de las flores dando felicidad y alegría. 
+                  Traemos a ustedes hermosas flores y transmitirlas a tráves de esta galería trabajada con amor y cariño</p>
             </div>
-            <div class="footer-copyright">
-                <p>&copy; 2024 Jardín de Flores El Salvador. Todos los derechos reservados.</p>
+            <div class="footer-contact">
+                <h4>Contáctanos</h4>
+                <p>Email: <a href="mailto:info@floresgaleria.com.sv">info@floresgaleria.com.sv</a></p>
+                <p>Dirección: 27 Av. Nte #1317 San Salvador, El Salvador</p>
+                <p>PBX: 2440-3344 / 2623-5555</p>
             </div>
-        </footer>
+        </div>
+        <div class="footer-copyright">
+            <p>&copy; 2024 Galería de Las Flores. Todos los derechos reservados.</p>
+        </div>
+    </footer>
 
         <!-- Scripts -->
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
