Otros cambios finales

--- a/contactus.html
+++ b/contactus.html
@@ -39,7 +39,7 @@
             <div class="info-content">
               <div class="form-section">
                 <h2 class="text">Formulario de Contacto</h2>
-                <form action="#">
+                <form action="#" onsubmit="alert('Formulario enviado (simulación)'); return false;">
                   <div class="form-row">
                     <div class="input-data">
                       <input type="text" required>
@@ -77,7 +77,7 @@
                 </form>
               </div>
               <div class="image-section">
-                <img src="imagen/cosmos-8546570_1280.jpg" alt="Doctor Image" class="doctor-image">
+                <img src="imagen/cosmos-8546570_1280.jpg" alt="Flor Image" class="flor-image">
               </div>
             </div>
           </div>
