--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="present">
       <h1>El Jardín de las flores</h1>
       <p>Conoce nuestra colección de flores en nuestra glaeria</p>
-      <button class="btnpresent"><i class="material-symbols-outlined">image</i>Contactanos </button>
+      <button class="btnpresent" onclick="window.location.href='contactus.html'"><i class="material-symbols-outlined">image</i>Contactanos </button>
     </div>
   </div>
   <div class="container swiper">
