otros arreglos de estructura

--- a/html/contactus.html
+++ b/html/contactus.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Galería de Las Flores</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -77,7 +77,7 @@
                 </form>
               </div>
               <div class="image-section">
-                <img src="imagen/cosmos-8546570_1280.jpg" alt="Flor Image" class="flor-image">
+                <img src="../imagen/cosmos-8546570_1280.jpg" alt="Flor Image" class="flor-image">
               </div>
             </div>
           </div>
@@ -104,7 +104,7 @@
         
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="js/cards.js"></script>
+    <script src="../js/cards.js"></script>
   </body>
 </html>
 
