--- a/html/galeria.html
+++ b/html/galeria.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Galería de Las Flores</title>
-        <link rel="stylesheet" href="css/galeria.css">
+        <link rel="stylesheet" href="../css/galeria.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,7 +42,7 @@
                 <ul class="card-list swiper-wrapper">
                     <li class="card-item swiper-slide">
                       <a href="galeria.html" class="card-link">
-                        <img src="imagen/anemone-2396299_1920.jpg" alt="Card Image" class="card-image">
+                        <img src="../imagen/anemone-2396299_1920.jpg" alt="Card Image" class="card-image">
                         <p class="badge badge-designer">Anemona Azul</p>
                         <h2 class="card-title">Las anémonas azules son flores elegantes y vibrantes, conocidas por sus pétalos sedosos de un color azul intenso. Simbolizan la anticipación y el amor no correspondido, y florecen principalmente en primavera.</h2>
                         <button class="card-button material-symbols-outlined">arrow_forward</button>
@@ -50,7 +50,7 @@
                     </li>
                     <li class="card-item swiper-slide">
                       <a href="galeria.html" class="card-link">
-                        <img src="imagen/cherry-blossom-tree-1225186_1920.jpg" alt="Card Image" class="card-image">
+                        <img src="../imagen/cherry-blossom-tree-1225186_1920.jpg" alt="Card Image" class="card-image">
                         <p class="badge badge-designer">flores de Cerezo</p>
                         <h2 class="card-title">Las flores de cerezo, o sakura, son famosas por su belleza efímera. Cada primavera, estos árboles adornan parques y jardines con sus delicadas flores rosadas, simbolizando la fragilidad y la belleza de la vida.</h2>
                         <button class="card-button material-symbols-outlined">arrow_forward</button>
@@ -58,7 +58,7 @@
                     </li>
                     <li class="card-item swiper-slide">
                       <a href="galeria.html" class="card-link">
-                        <img src="imagen/bird-7403593_1280.jpg" alt="Card Image" class="card-image">
+                        <img src="../imagen/bird-7403593_1280.jpg" alt="Card Image" class="card-image">
                         <p class="badge badge-designer">Amapolas</p>
                         <h2 class="card-title">Las amapolas son conocidas por sus vibrantes pétalos rojos y su asociación con el recuerdo y la paz. En algunas culturas, también representan la esperanza y la renovación tras la adversidad.</h2>
                         <button class="card-button material-symbols-outlined">arrow_forward</button>
@@ -66,7 +66,7 @@
                     </li>
                     <li class="card-item swiper-slide">
                       <a href="galeria.html" class="card-link">
-                        <img src="imagen/silver-wattle-7442792_1280.jpg" alt="Card Image" class="card-image">
+                        <img src="../imagen/silver-wattle-7442792_1280.jpg" alt="Card Image" class="card-image">
                         <p class="badge badge-designer">Acacia de Plata</p>
                         <h2 class="card-title">La Acacia de Plata es famosa por sus pequeñas flores amarillas en forma de esferas. Estas flores se asocian con la amistad y la ternura, y son un símbolo de fortaleza femenina. Bellezas coloridas y hermosas.</h2>
                         <button class="card-button material-symbols-outlined">arrow_forward</button>
@@ -88,7 +88,7 @@
                     <li class="video-item">
                         <div class="video-content">
                             <video controls>
-                                <source src="videos/16453-272487468_small.mp4" type="video/mp4">
+                                <source src="../videos/16453-272487468_small.mp4" type="video/mp4">
                                 Tu navegador no soporta la etiqueta de video.
                             </video>
                         </div>
@@ -96,7 +96,7 @@
                     <li class="video-item">
                         <div class="video-content">
                             <video controls>
-                                <source src="videos/205397-926957391_small.mp4" type="video/mp4">
+                                <source src="../videos/205397-926957391_small.mp4" type="video/mp4">
                                 Tu navegador no soporta la etiqueta de video.
                             </video>
                         </div>
@@ -104,7 +104,7 @@
                     <li class="video-item">
                         <div class="video-content">
                             <video controls>
-                                <source src="videos/213874_tiny.mp4" type="video/mp4">
+                                <source src="../videos/213874_tiny.mp4" type="video/mp4">
                                 Tu navegador no soporta la etiqueta de video.
                             </video>
                         </div>
@@ -135,6 +135,6 @@
 
         <!-- Scripts -->
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-        <script src="js/cards.js"></script>
+        <script src="../js/cards.js"></script>
     </body>
 </html>
