--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Galería de Las Flores</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +20,7 @@
   <header>
     <nav>
       <div>
-        <h1><a href="index.html"><span class="material-symbols-outlined">emoji_nature</span>Galería de Las Flores</a></h1>
+        <h1><a href="html/index.html"><span class="material-symbols-outlined">emoji_nature</span>Galería de Las Flores</a></h1>
       </div>
 
 
@@ -52,32 +52,32 @@
     <div class="card-wrapper">
       <ul class="card-list swiper-wrapper">
         <li class="card-item swiper-slide">
-          <a href="galeria.html" class="card-link">
-            <img src="imagen/anemone-2396299_1920.jpg" alt="Card Image" class="card-image">
+          <a href="html/galeria.html" class="card-link">
+            <img src="../imagen/anemone-2396299_1920.jpg" alt="Card Image" class="card-image">
             <p class="badge badge-designer">Anemona Azul</p>
             <h2 class="card-title">La Anémona Azul, símbolo de anticipación y amor no correspondido</h2>
             <button class="card-button material-symbols-outlined">arrow_forward</button>
           </a>
         </li>
         <li class="card-item swiper-slide">
-          <a href="galeria.html" class="card-link">
-            <img src="imagen/cherry-blossom-tree-1225186_1920.jpg" alt="Card Image" class="card-image">
+          <a href="html/galeria.html" class="card-link">
+            <img src="../imagen/cherry-blossom-tree-1225186_1920.jpg" alt="Card Image" class="card-image">
             <p class="badge badge-designer">flores de Cerezo</p>
             <h2 class="card-title">La Sakura, un símbolo de la fragilidad y la belleza de la vida</h2>
             <button class="card-button material-symbols-outlined">arrow_forward</button>
           </a>
         </li>
         <li class="card-item swiper-slide">
-          <a href="galeria.html" class="card-link">
-            <img src="imagen/bird-7403593_1280.jpg" alt="Card Image" class="card-image">
+          <a href="html/galeria.html" class="card-link">
+            <img src="../imagen/bird-7403593_1280.jpg" alt="Card Image" class="card-image">
             <p class="badge badge-designer">Amapolas</p>
             <h2 class="card-title">Las Amapolas, un emblema de recuerdo, esperanza y renovación</h2>
             <button class="card-button material-symbols-outlined">arrow_forward</button>
           </a>
         </li>
         <li class="card-item swiper-slide">
-          <a href="galeria.html" class="card-link">
-            <img src="imagen/silver-wattle-7442792_1280.jpg" alt="Card Image" class="card-image">
+          <a href="html/galeria.html" class="card-link">
+            <img src="../imagen/silver-wattle-7442792_1280.jpg" alt="Card Image" class="card-image">
             <p class="badge badge-designer">Acacia de Plata</p>
             <h2 class="card-title">La Acacia de Plata, símbolo de amistad y fortaleza femenina</h2>
             <button class="card-button material-symbols-outlined">arrow_forward</button>
@@ -113,7 +113,7 @@
 
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-  <script src="js/cards.js"></script>
+  <script src="../js/cards.js"></script>
 </body>
 
 </html>
