Arreglando cosas de nuevo

--- a/html/contactus.html
+++ b/html/contactus.html
@@ -15,13 +15,13 @@
       <header>
         <nav>
           <div>
-            <h1><a href="index.html"><span class="material-symbols-outlined">emoji_nature</span>Galería de Las Flores</a></h1>
+            <h1><a href="../index.html"><span class="material-symbols-outlined">emoji_nature</span>Galería de Las Flores</a></h1>
           </div>
     
     
           <ul>
             <li>
-              <a href="index.html">Home</a>
+              <a href="../index.html">Home</a>
             </li>
             <li>
               <a href="contactus.html">Contactanos</a>
