--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Galería de Las Flores</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +20,7 @@
   <header>
     <nav>
       <div>
-        <h1><a href="html/index.html"><span class="material-symbols-outlined">emoji_nature</span>Galería de Las Flores</a></h1>
+        <h1><a href="index.html"><span class="material-symbols-outlined">emoji_nature</span>Galería de Las Flores</a></h1>
       </div>
 
 
@@ -29,13 +29,13 @@
           <a href="#">Home</a>
         </li>
         <li>
-          <a href="contactus.html">Contactanos</a>
+          <a href="html/contactus.html">Contactanos</a>
         </li>
         <li>
-          <a href="galeria.html">Nuestra galería</a>
+          <a href="html/galeria.html">Nuestra galería</a>
         </li>
         <li>
-          <a href="aboutus.html">About Us</a>
+          <a href="html/aboutus.html">About Us</a>
         </li>
       </ul>
     </nav>
@@ -44,7 +44,7 @@
     <div class="present">
       <h1>El Jardín de las flores</h1>
       <p>Conoce nuestra colección de flores en nuestra glaeria</p>
-      <button class="btnpresent" onclick="window.location.href='contactus.html'"><i class="material-symbols-outlined">image</i>Contactanos </button>
+      <button class="btnpresent" onclick="window.location.href='html/contactus.html'"><i class="material-symbols-outlined">image</i>Contactanos </button>
     </div>
   </div>
   <div class="container swiper">
@@ -53,7 +53,7 @@
       <ul class="card-list swiper-wrapper">
         <li class="card-item swiper-slide">
           <a href="html/galeria.html" class="card-link">
-            <img src="../imagen/anemone-2396299_1920.jpg" alt="Card Image" class="card-image">
+            <img src="imagen/anemone-2396299_1920.jpg" alt="Card Image" class="card-image">
             <p class="badge badge-designer">Anemona Azul</p>
             <h2 class="card-title">La Anémona Azul, símbolo de anticipación y amor no correspondido</h2>
             <button class="card-button material-symbols-outlined">arrow_forward</button>
@@ -61,7 +61,7 @@
         </li>
         <li class="card-item swiper-slide">
           <a href="html/galeria.html" class="card-link">
-            <img src="../imagen/cherry-blossom-tree-1225186_1920.jpg" alt="Card Image" class="card-image">
+            <img src="imagen/cherry-blossom-tree-1225186_1920.jpg" alt="Card Image" class="card-image">
             <p class="badge badge-designer">flores de Cerezo</p>
             <h2 class="card-title">La Sakura, un símbolo de la fragilidad y la belleza de la vida</h2>
             <button class="card-button material-symbols-outlined">arrow_forward</button>
@@ -69,7 +69,7 @@
         </li>
         <li class="card-item swiper-slide">
           <a href="html/galeria.html" class="card-link">
-            <img src="../imagen/bird-7403593_1280.jpg" alt="Card Image" class="card-image">
+            <img src="imagen/bird-7403593_1280.jpg" alt="Card Image" class="card-image">
             <p class="badge badge-designer">Amapolas</p>
             <h2 class="card-title">Las Amapolas, un emblema de recuerdo, esperanza y renovación</h2>
             <button class="card-button material-symbols-outlined">arrow_forward</button>
@@ -77,7 +77,7 @@
         </li>
         <li class="card-item swiper-slide">
           <a href="html/galeria.html" class="card-link">
-            <img src="../imagen/silver-wattle-7442792_1280.jpg" alt="Card Image" class="card-image">
+            <img src="imagen/silver-wattle-7442792_1280.jpg" alt="Card Image" class="card-image">
             <p class="badge badge-designer">Acacia de Plata</p>
             <h2 class="card-title">La Acacia de Plata, símbolo de amistad y fortaleza femenina</h2>
             <button class="card-button material-symbols-outlined">arrow_forward</button>
@@ -113,7 +113,7 @@
 
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-  <script src="../js/cards.js"></script>
+  <script src="js/cards.js"></script>
 </body>
 
 </html>
