--- a/html/galeria.html
+++ b/html/galeria.html
@@ -1,140 +1,257 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Galería de Las Flores</title>
-        <link rel="stylesheet" href="../css/galeria.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Reddit+Sans+Condensed:wght@200..900&family=SUSE:wght@100..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    </head>
-    <body>
-        <header>
-            <nav>
-              <div>
-                <h1><a href="../index.html"><span class="material-symbols-outlined">emoji_nature</span>Galería de Las Flores</a></h1>
-              </div>
-        
-        
-              <ul>
-                <li>
-                  <a href="../index.html">Home</a>
-                </li>
-                <li>
-                  <a href="contactus.html">Contactanos</a>
-                </li>
-                <li>
-                  <a href="galeria.html">Nuestra galería</a>
-                </li>
-                <li>
-                  <a href="aboutus.html">About Us</a>
-                </li>
-              </ul>
-            </nav>
-          </header>
 
-        <div class="container swiper">
-            <h2 class="section-title">Nuestra colección</h2>
-            <div class="card-wrapper">
-                <ul class="card-list swiper-wrapper">
-                    <li class="card-item swiper-slide">
-                      <a href="galeria.html" class="card-link">
-                        <img src="../imagen/anemone-2396299_1920.jpg" alt="Card Image" class="card-image">
-                        <p class="badge badge-designer">Anemona Azul</p>
-                        <h2 class="card-title">Las anémonas azules son flores elegantes y vibrantes, conocidas por sus pétalos sedosos de un color azul intenso. Simbolizan la anticipación y el amor no correspondido, y florecen principalmente en primavera.</h2>
-                        <button class="card-button material-symbols-outlined">arrow_forward</button>
-                      </a>
-                    </li>
-                    <li class="card-item swiper-slide">
-                      <a href="galeria.html" class="card-link">
-                        <img src="../imagen/cherry-blossom-tree-1225186_1920.jpg" alt="Card Image" class="card-image">
-                        <p class="badge badge-designer">flores de Cerezo</p>
-                        <h2 class="card-title">Las flores de cerezo, o sakura, son famosas por su belleza efímera. Cada primavera, estos árboles adornan parques y jardines con sus delicadas flores rosadas, simbolizando la fragilidad y la belleza de la vida.</h2>
-                        <button class="card-button material-symbols-outlined">arrow_forward</button>
-                      </a>
-                    </li>
-                    <li class="card-item swiper-slide">
-                      <a href="galeria.html" class="card-link">
-                        <img src="../imagen/bird-7403593_1280.jpg" alt="Card Image" class="card-image">
-                        <p class="badge badge-designer">Amapolas</p>
-                        <h2 class="card-title">Las amapolas son conocidas por sus vibrantes pétalos rojos y su asociación con el recuerdo y la paz. En algunas culturas, también representan la esperanza y la renovación tras la adversidad.</h2>
-                        <button class="card-button material-symbols-outlined">arrow_forward</button>
-                      </a>
-                    </li>
-                    <li class="card-item swiper-slide">
-                      <a href="galeria.html" class="card-link">
-                        <img src="../imagen/silver-wattle-7442792_1280.jpg" alt="Card Image" class="card-image">
-                        <p class="badge badge-designer">Acacia de Plata</p>
-                        <h2 class="card-title">La Acacia de Plata es famosa por sus pequeñas flores amarillas en forma de esferas. Estas flores se asocian con la amistad y la ternura, y son un símbolo de fortaleza femenina. Bellezas coloridas y hermosas.</h2>
-                        <button class="card-button material-symbols-outlined">arrow_forward</button>
-                      </a>
-                    </li>
-                  </ul>
-                <div class="swiper-pagination"></div>
-                <div class="swiper-slide-button swiper-button-prev"></div>
-                <div class="swiper-slide-button swiper-button-next"></div>
-            </div>
-        </div>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Galería de Las Flores</title>
+  <link rel="stylesheet" href="../css/galeria.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Reddit+Sans+Condensed:wght@200..900&family=SUSE:wght@100..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+</head>
 
-        <!-- Nueva sección de videos -->
-         <section class="videocontent">
-        <div class="container video-gallery">
-            <h2 class="section-title">Nuestra colección de videos</h2>
-            <div class="video-wrapper">
-                <ul class="video-list">
-                    <li class="video-item">
-                        <div class="video-content">
-                            <video controls>
-                                <source src="../videos/16453-272487468_small.mp4" type="video/mp4">
-                                Tu navegador no soporta la etiqueta de video.
-                            </video>
-                        </div>
-                    </li>
-                    <li class="video-item">
-                        <div class="video-content">
-                            <video controls>
-                                <source src="../videos/205397-926957391_small.mp4" type="video/mp4">
-                                Tu navegador no soporta la etiqueta de video.
-                            </video>
-                        </div>
-                    </li>
-                    <li class="video-item">
-                        <div class="video-content">
-                            <video controls>
-                                <source src="../videos/213874_tiny.mp4" type="video/mp4">
-                                Tu navegador no soporta la etiqueta de video.
-                            </video>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </section>
+<body>
+  <header>
+    <nav>
+      <div>
+        <h1><a href="../index.html"><span class="material-symbols-outlined">emoji_nature</span>Galería de Las Flores</a>
+        </h1>
+      </div>
+      <!-- Lightbox -->
+      <div id="lightbox" class="lightbox">
+        <span class="close">&times;</span>
+        <img class="lightbox-content" id="lightbox-img">
+        <div id="caption"></div>
+        <!-- Botones para navegar entre las imágenes -->
+        <a class="prev" id="prev">&#10094;</a>
+        <a class="next" id="next">&#10095;</a>
+      </div>
 
-    <footer>
-        <div class="footer-container">
-            <div class="footer-content">
-                <h3>Galería de Las Flores.</h3>
-                <p>Nosotros creemos en el poder de las flores dando felicidad y alegría. 
-                  Traemos a ustedes hermosas flores y transmitirlas a tráves de esta galería trabajada con amor y cariño</p>
-            </div>
-            <div class="footer-contact">
-                <h4>Contáctanos</h4>
-                <p>Email: <a href="mailto:info@floresgaleria.com.sv">info@floresgaleria.com.sv</a></p>
-                <p>Dirección: 27 Av. Nte #1317 San Salvador, El Salvador</p>
-                <p>PBX: 2440-3344 / 2623-5555</p>
-            </div>
-        </div>
-        <div class="footer-copyright">
-            <p>&copy; 2024 Galería de Las Flores. Todos los derechos reservados.</p>
-        </div>
-    </footer>
 
-        <!-- Scripts -->
-        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-        <script src="../js/cards.js"></script>
-    </body>
+
+
+      <ul>
+        <li>
+          <a href="../index.html">Home</a>
+        </li>
+        <li>
+          <a href="contactus.html">Contactanos</a>
+        </li>
+        <li>
+          <a href="galeria.html">Nuestra galería</a>
+        </li>
+        <li>
+          <a href="aboutus.html">About Us</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+  <div class="container swiper">
+    <h2 class="section-title">Nuestra colección</h2>
+    <div class="card-wrapper">
+      <ul class="card-list swiper-wrapper">
+        <li class="card-item swiper-slide">
+          <a href="galeria.html" class="card-link">
+            <img src="../imagen/anemone-2396299_1920.jpg" alt="Anenoma Azul" class="card-image">
+            <p class="badge badge-designer">Anemona Azul</p>
+            <h2 class="card-title">Las anémonas azules son flores elegantes y vibrantes, conocidas por sus pétalos
+              sedosos de un color azul intenso. Simbolizan la anticipación y el amor no correspondido, y florecen
+              principalmente en primavera.</h2>
+            <button class="card-button material-symbols-outlined">arrow_forward</button>
+          </a>
+        </li>
+        <li class="card-item swiper-slide">
+          <a href="galeria.html" class="card-link">
+            <img src="../imagen/cherry-blossom-tree-1225186_1920.jpg" alt="Flores de Cerezo" class="card-image">
+            <p class="badge badge-designer">flores de Cerezo</p>
+            <h2 class="card-title">Las flores de cerezo, o sakura, son famosas por su belleza efímera. Cada primavera,
+              estos árboles adornan parques y jardines con sus delicadas flores rosadas, simbolizando la fragilidad y la
+              belleza de la vida.</h2>
+            <button class="card-button material-symbols-outlined">arrow_forward</button>
+          </a>
+        </li>
+        <li class="card-item swiper-slide">
+          <a href="galeria.html" class="card-link">
+            <img src="../imagen/bird-7403593_1280.jpg" alt="Amapolas" class="card-image">
+            <p class="badge badge-designer">Amapolas</p>
+            <h2 class="card-title">Las amapolas son conocidas por sus vibrantes pétalos rojos y su asociación con el
+              recuerdo y la paz. En algunas culturas, también representan la esperanza y la renovación tras la
+              adversidad.</h2>
+            <button class="card-button material-symbols-outlined">arrow_forward</button>
+          </a>
+        </li>
+        <li class="card-item swiper-slide">
+          <a href="galeria.html" class="card-link">
+            <img src="../imagen/silver-wattle-7442792_1280.jpg" alt="Acacia de Plata" class="card-image">
+            <p class="badge badge-designer">Acacia de Plata</p>
+            <h2 class="card-title">La Acacia de Plata es famosa por sus pequeñas flores amarillas en forma de esferas.
+              Estas flores se asocian con la amistad y la ternura, y son un símbolo de fortaleza femenina. Bellezas
+              coloridas y hermosas.</h2>
+            <button class="card-button material-symbols-outlined">arrow_forward</button>
+          </a>
+        </li>
+      </ul>
+      <div class="swiper-pagination"></div>
+      <div class="swiper-slide-button swiper-button-prev"></div>
+      <div class="swiper-slide-button swiper-button-next"></div>
+    </div>
+  </div>
+
+  <!-- Nueva sección de videos -->
+  <section class="videocontent">
+    <div class="container video-gallery">
+      <h2 class="section-title">Nuestra colección de videos</h2>
+      <div class="video-wrapper">
+        <ul class="video-list">
+          <li class="video-item">
+            <div class="video-content">
+              <video controls>
+                <source src="../videos/16453-272487468_small.mp4" type="video/mp4">
+                Tu navegador no soporta la etiqueta de video.
+              </video>
+            </div>
+          </li>
+          <li class="video-item">
+            <div class="video-content">
+              <video controls>
+                <source src="../videos/205397-926957391_small.mp4" type="video/mp4">
+                Tu navegador no soporta la etiqueta de video.
+              </video>
+            </div>
+          </li>
+          <li class="video-item">
+            <div class="video-content">
+              <video controls>
+                <source src="../videos/213874_tiny.mp4" type="video/mp4">
+                Tu navegador no soporta la etiqueta de video.
+              </video>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <div class="footer-container">
+      <div class="footer-content">
+        <h3>Galería de Las Flores.</h3>
+        <p>Nosotros creemos en el poder de las flores dando felicidad y alegría.
+          Traemos a ustedes hermosas flores y transmitirlas a tráves de esta galería trabajada con amor y cariño</p>
+      </div>
+      <div class="footer-contact">
+        <h4>Contáctanos</h4>
+        <p>Email: <a href="mailto:info@floresgaleria.com.sv">info@floresgaleria.com.sv</a></p>
+        <p>Dirección: 27 Av. Nte #1317 San Salvador, El Salvador</p>
+        <p>PBX: 2440-3344 / 2623-5555</p>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <p>&copy; 2024 Galería de Las Flores. Todos los derechos reservados.</p>
+    </div>
+  </footer>
+
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script src="../js/cards.js"></script>
+  <script>
+    // Obtener los elementos de la lightbox
+    var lightbox = document.getElementById("lightbox");
+    var lightboxImg = document.getElementById("lightbox-img");
+    var captionText = document.getElementById("caption");
+    var currentIndex = 0; // Índice actual de la imagen
+    var cards = document.querySelectorAll(".card-image"); // Todas las imágenes
+
+    // Función para mostrar la lightbox con una imagen específica
+    function showLightbox(index) {
+      currentIndex = index;
+      lightbox.style.display = "block";
+      lightboxImg.src = cards[index].src;
+      captionText.innerHTML = cards[index].alt;
+      lightboxImg.classList.add("fade"); // Efecto de fade
+    }
+
+    // Agregar evento de clic a las imágenes de las tarjetas
+    cards.forEach(function (card, index) {
+      card.addEventListener("click", function (event) {
+        event.preventDefault(); // Evitar comportamiento por defecto
+        showLightbox(index);
+      });
+    });
+
+    // Cerrar la lightbox
+    var closeBtn = document.querySelector(".close");
+    closeBtn.addEventListener("click", function () {
+      lightbox.style.display = "none";
+    });
+
+    // Función para mostrar la imagen anterior
+    function showPrev() {
+      currentIndex = (currentIndex === 0) ? cards.length - 1 : currentIndex - 1;
+      showLightbox(currentIndex);
+    }
+
+    // Función para mostrar la imagen siguiente
+    function showNext() {
+      currentIndex = (currentIndex === cards.length - 1) ? 0 : currentIndex + 1;
+      showLightbox(currentIndex);
+    }
+
+    // Botones de navegación
+    var prevBtn = document.getElementById("prev");
+    var nextBtn = document.getElementById("next");
+
+    prevBtn.addEventListener("click", function () {
+      showPrev();
+    });
+
+    nextBtn.addEventListener("click", function () {
+      showNext();
+    });
+
+    // Evitar que se cierre la lightbox al hacer clic en la imagen
+    lightboxImg.addEventListener("click", function (event) {
+      event.stopPropagation();
+    });
+    lightboxImg.addEventListener('animationend', function () {
+      lightboxImg.classList.remove('fade');
+    });
+
+
+  </script>
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const cards = document.querySelectorAll('.card-item');
+      const videos = document.querySelectorAll('.video-item');
+
+      // Configuración del Intersection Observer
+      const observer = new IntersectionObserver(entries => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            entry.target.classList.add('visible'); // Añadir la clase visible cuando entra en el viewport
+          }
+        });
+      });
+
+      // Observar cada tarjeta (card)
+      cards.forEach(card => {
+        observer.observe(card);
+      });
+
+      // Observar cada video
+      videos.forEach(video => {
+        observer.observe(video);
+      });
+    });
+  </script>
+
+</body>
+
 </html>
