--- a/404.html
+++ b/404.html
@@ -45,7 +45,7 @@
         <h1>404</h1>
         <p>Página no encontrada</p>
         <p>Lo sentimos, no hemos podido encontrar la página que buscas.</p>
-        <a href="index.html" class="btn-error"><i class="material-symbols-outlined">home</i> Volver al inicio</a>
+        <a href="/index.html" class="btn-error"><i class="material-symbols-outlined">home</i> Volver al inicio</a>
     </div>
 
     <footer>
